--- a/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/add-po-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/add-po-details.html
@@ -311,7 +311,12 @@
               
                   </tr>
 
-                
+                  <tr>
+                  <td class="allif-fix-table-col">Tax Rate</td>
+                  <td>{{form.taxrate}}</td>
+              
+                  </tr>
+
             <tr>
               <td class="allif-fix-table-col">Action</td>
               <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
