--- a/allifmaalcommonapp/templates/allifmaalcommonapp/quotes/quote-pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/quotes/quote-pdf.html
@@ -95,7 +95,7 @@
 
      <tr>
     <td colspan="5" id="allif-pdf-table-body-no-border"></td>
-    <td colspan="4"> Tax Amount </td>
+    <td colspan="4"> Tax Amount {{allifquery.salestax.taxrate}}% </td>
     <td colspan="3"> {{allifquery.taxAmount|floatformat:2|intcomma}}</td>
     </tr>
 
