--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
@@ -83,6 +83,10 @@
                 <td class="allif-fix-table-col">Tax Rate</td>
                 <td>{{form.taxrate}}</td>
               </tr>
+               <tr>
+                <td class="allif-fix-table-col">Supplier Tax Rate</td>
+                <td>{{form.suppliertaxrate}}</td>
+              </tr>
         </tbody>
         </table>
       </div>
@@ -216,6 +220,10 @@
         <td class="allif-fix-table-col">Tax Rate</td>
         <td>{{form.taxrate}}</td>
       </tr>
+       <tr>
+          <td class="allif-fix-table-col">Supplier Tax Rate</td>
+          <td>{{form.suppliertaxrate}}</td>
+        </tr>
         </tbody>
         </table>
       </div>
