--- a/allifmaalcommonapp/templates/allifmaalcommonapp/quotes/add-quote-items.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/quotes/add-quote-items.html
@@ -12,11 +12,15 @@
   <div class="row mt-12" ><!--start....header row-->
   <div class="col-md-12"><!--start....header column-->
   <div class="container-fluid amel-content-header">
+    <a class="amel-table-list-identifier">Add Items {{allifquery}}:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
     <a href="{% url 'allifmaalcommonapp:commonAddQuoteItems' allifquery.id user_var glblslug %}">Refresh</a>
     <a href="{% url 'allifmaalcommonapp:commonAddQuoteDetails' allifquery.id user_var glblslug %}">Quote Details</a>
     <a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}">Quotations</a>
     <a href="{% url 'allifmaalcommonapp:commonInvoices' user_var glblslug %}">Invoices</a>
+
+  <a href="{% url 'allifmaalcommonapp:commonQuoteToPdf' allifquery.id user_var glblslug %}">Download</a>
+    
   </div>
   
       </div><!--end....header column-->
@@ -26,6 +30,9 @@
   </div><!--end....main headere-->
 
 <div class="allifmaincontainer">
+
+
+
   <div class="row mt-12"> <!--start....table row-->
     <div class="col-md-12"><!--start of the first row body-->
       <div class="allif-form-container">
@@ -37,16 +44,16 @@
             <thead>
               <tr class="allif-table-header-row">
                
-                <td>Items</td>
+                <td>Item Description</td>
                 <td>Quantity</td>
-                <td>Stock</td>
-                <td>Cost</td>
-                <td>Price</td>
-               
-                <td>Amount</td>
                 <td>Discount</td>
-                <td>Total</td>
-                <td>Tax</td>
+                <td>Part No.</td>
+                <td>In Stock</td>
+                <td>Unit Cost</td>
+                <td>Unit Price</td>
+                <td>Amount</td>
+             
+             
               <td>Navigate</td>
               
               <td> . . . </td>
@@ -54,35 +61,22 @@
               </tr>
               </thead>
               <tbody class="allif-table-body">
-              
-              <tr>
-                <form method='POST' action=''>{% csrf_token %}
-                 
-                  <td id="allif-table-inline-form">{{form.description}}</td>
-                  <td id="allif-table-inline-form">{{form.quantity}}</td>
-                  
-                  <td id="allif-table-inline-form"> <input type="submit" value='Add Item' class="btn btn-success allifmaal-submit-btn"></td>
-                  <td id="allif-table-inline-form" colspan="9"></td>
-                 
-                </form>
-                </tr>
-               
-              
+             
               {% for item in allifqueryset %} 
               <tr data-id="{{item.id}}">
               <td><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonStockItemDetails' item.description.id user_var glblslug %}">{{item.description}}</a></td>
             
           <td>{{item.quantity|floatformat:2|intcomma}}</td>
+          <td>{{item.discount|floatformat:2|intcomma}}%</td>
+          <td> {{item.description.partNumber}}</td>
+         
           <td>{{item.description.quantity|floatformat:2|intcomma}}</td>
           <td>{{item.description.unitcost|floatformat:2|intcomma}}</td>
           <td>{{item.description.unitPrice|floatformat:2|intcomma}}</td>
           
           <td>{{item.quote_selling_price|floatformat:2|intcomma}}</td>
-          <td>{{item.discount|floatformat:2|intcomma}}%</td>
-          <td>{{item.quote_selling_price_with_discount|floatformat:2|intcomma}}</td>
+          
          
-          <td>{{item.description.taxrate.taxrate|floatformat:2|intcomma}}%</td>
-             
                <td>
                 <div class="dropdown allifmaal-content-dropdown">
                   <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
@@ -106,42 +100,60 @@
         
           </tr>
           {% endfor %}
+
+           <tr>
+                <form method='POST' action=''>{% csrf_token %}
+                 
+                  <td id="allif-table-inline-form">{{form.description}}</td>
+                  <td id="allif-table-inline-form">{{form.quantity}}</td>
+                  <td id="allif-table-inline-form">{{form.discount}}</td>
+                  <td id="allif-table-inline-form"> <input type="submit" value='Add' class="btn btn-success allifmaal-submit-btn"></td>
+                  <td id="allif-table-inline-form">_______________</td>
+                  <td id="allif-table-inline-form">_______________</td>
+                  <td id="allif-table-inline-form">_______________</td>
+                  <td id="allif-table-inline-form" colspan="5">_______________</td>
+                
+                
+                
+                </form>
+                </tr>
+
           <tr>
-            
-            <td id="allif-table-sums-section" colspan="5">Sub Total</td>
-            <td id="allif-table-sums-section">{{allifquery.total|floatformat:2|intcomma}}</td>
-            <td id="allif-table-sums-section" colspan="6"></td>
+            <td id="allif-table-sums-section" colspan="3"></td>
+            <td id="allif-table-sums-section" colspan="4">Sub Total</td>
+            <td id="allif-table-sums-section" colspan="2">{{allifquery.total|floatformat:2|intcomma}}</td>
+            <td id="allif-table-sums-section" colspan="3"></td>
             
           </tr>
   
           <tr>
-            
-            <td id="allif-table-sums-section" colspan="6">Discount</td>
-            <td id="allif-table-sums-section">{{allifquery.discountAmount|floatformat:2|intcomma}}</td>
-            <td id="allif-table-sums-section" colspan="5"></td>
+            <td id="allif-table-sums-section" colspan="3"></td>
+            <td id="allif-table-sums-section" colspan="4">Discount</td>
+            <td id="allif-table-sums-section" colspan="2">{{allifquery.discountAmount|floatformat:2|intcomma}}</td>
+            <td id="allif-table-sums-section" colspan="3"></td>
             
             </tr>
             <tr>
-            
-              <td id="allif-table-sums-section" colspan="7">Discounted Amount</td>
-              <td id="allif-table-sums-section">{{allifquery.totalwithdiscount|floatformat:2|intcomma}}</td>
-              <td id="allif-table-sums-section" colspan="4"></td>
+            <td id="allif-table-sums-section" colspan="3"></td>
+              <td id="allif-table-sums-section" colspan="4">Total</td>
+              <td id="allif-table-sums-section" colspan="2">{{allifquery.totalwithdiscount|floatformat:2|intcomma}}</td>
+              <td id="allif-table-sums-section" colspan="3"></td>
               
               </tr>
   
             
             <tr>
-             
-              <td id="allif-table-sums-section" colspan="8"> Add Tax</td>
-              <td id="allif-table-sums-section">{{allifquery.taxAmount|floatformat:2|intcomma}}</td>
+             <td id="allif-table-sums-section" colspan="3"></td>
+              <td id="allif-table-sums-section" colspan="4"> Add Tax {{allifquery.salestax.taxrate}}%</td>
+              <td id="allif-table-sums-section" colspan="2">{{allifquery.taxAmount|floatformat:2|intcomma}}</td>
               <td id="allif-table-sums-section" colspan="3"></td>
               
               </tr>
           
                 <tr>
-                 
-                  <td id="allif-table-sums-section" colspan="7"><strong>Grand Total</strong></td>
-                  <td id="allif-table-sums-section"><strong>{{allifquery.grandtotal|floatformat:2|intcomma}}</strong></td>
+                 <td id="allif-table-sums-section" colspan="3"></td>
+                  <td id="allif-table-sums-section" colspan="4"><strong>Grand Total {{allifquery.currency}}</strong></td>
+                  <td id="allif-table-sums-section" colspan="2"><strong>{{allifquery.grandtotal|floatformat:2|intcomma}}</strong></td>
                   <td id="allif-table-sums-section" colspan="4"></td>
                   
                   </tr>
@@ -162,6 +174,8 @@
             
         </div>
             </div><!--end of first row body....-->
+
+
   
 </div><!--end of main container of the page-->
 </div>
