--- a/allifmaalcommonapp/templates/allifmaalcommonapp/base/sidetopnavbars/sidetopnavbars.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/base/sidetopnavbars/sidetopnavbars.html
@@ -25,8 +25,12 @@
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSpecificDashboard' user_var glblslug %}">Dashboard</a></li>
       
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCompanyDetailsForClients' user_var glblslug %}">Company</a></li>
-      
-
+      <li><a class="dropdown-item" href="{% url 'allifmaalonlineapp:allifOnlineHome' %}">Online</a></li>
+    
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonWarehouses' user_var glblslug %}">Warehouses</a></li>
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonTransferOrders' user_var glblslug %}">Transfers</a></li>
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCreditNotes' user_var glblslug %}">CreditNotes</a></li>
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonApprovers' user_var glblslug %}">Approvers</a></li>
       
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a></li>
       
