--- a/allifmaalcommonapp/templates/allifmaalcommonapp/base/uimainbase/allifmaaluibase.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/base/uimainbase/allifmaaluibase.html
@@ -16,7 +16,7 @@
 <link href="{% static 'allifapperp/css/navbars/sidetopnavbars.css' %}" rel="stylesheet">
 <link href="{% static 'allifapperp/css/body/mainbodyui.css' %}" rel="stylesheet">
 <!--any styles loaded from the static files are to be included here...-->
-
+<link href="{% static 'css/main.css' %}" rel="stylesheet">
 
 {% block style %}
 
