--- a/allifmaalsalesapp/templates/allifmaalsalesapp/home/home.html
+++ b/allifmaalsalesapp/templates/allifmaalsalesapp/home/home.html
@@ -46,7 +46,7 @@
             <thead>
               <tr class="allif-table-header-row">
               <td>Categories</td>
-              <td>Votes added</td>
+              <td>Stocks </td>
               </tr>
               </thead>
               <tbody class="allif-table-body">
