alxamdullilah...I finished the commonapp module on 2nd June 2025

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/staff/staff.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/staff/staff.html
@@ -53,7 +53,9 @@
     <a href="{% url 'allifmaalcommonapp:commonAddUser' user_var glblslug %}">New Staff</a>
     <a href="{% url 'allifmaalcommonapp:commonSalaries' user_var glblslug %}">Payroll</a>
     <a href="{% url 'allifmaalcommonapp:commonStaffProfiles' user_var glblslug %}">Profiles</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddStaffProfile' user_var glblslug %}" >New Profile </a>
+    <a href="{% url 'allifmaalcommonapp:commonAddStaffProfile' user_var glblslug %}">New Profile </a>
+    <a href="{% url 'allifmaalcommonapp:commonApprovers' user_var glblslug %}">Approvers </a>
+
     <a href="{% url 'allifmaalcommonapp:commonSalaries' user_var glblslug %}">Salary Payments</a>
   
  
