--- a/allifmaalcommonapp/templates/allifmaalcommonapp/invoices/invoices.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/invoices/invoices.html
@@ -96,7 +96,10 @@
     <a href="{% url 'allifmaalcommonapp:commonInvoices' user_var glblslug %}">Invoices</a>
     <a href="{% url 'allifmaalcommonapp:commonPostedInvoices' user_var glblslug %}">Posted Invoices</a>
     <a href="{% url 'allifmaalcommonapp:commonNewInvoice' user_var glblslug %}">New Invoice</a>
- 
+
+     <a href="{% url 'allifmaalcommonapp:commonCreditNotes' user_var glblslug %}">Credit Notes</a>
+
+    
  
   </div>
   
