--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/stocks.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/stocks.html
@@ -93,10 +93,13 @@
     </div>
     <a class="amel-table-list-identifier">Inventory:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonWarehouses' user_var glblslug %}">Warehouses</a>
+    <a href="{% url 'allifmaalcommonapp:commonTransferOrders' user_var glblslug %}">Transfer Orders</a>
     <a href="{% url 'allifmaalcommonapp:commonStockCats' user_var glblslug %}">Categories</a>
     
     <a href="{% url 'allifmaalcommonapp:commonAddStockItem' user_var glblslug %}">New Stock Item</a>
- 
+
+    
   </div>
   
       </div><!--end....header column-->
