--- a/allifmaalcommonapp/templates/allifmaalcommonapp/base/uimainbase/allifmaaluibase.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/base/uimainbase/allifmaaluibase.html
@@ -1,8 +1,9 @@
 {% load static %}
-<link rel="shortcut icon" href='{% static "allifapperp/css/images/allifmaal-icon.png" %}' type="png/ico">
+
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="shortcut icon" href='{% static "allifapperp/css/images/Allifmaal-icon.png" %}' type="image/png">
 <title>
 {% block title %}
 <!--the title of each page will be displayed here.....-->
@@ -16,7 +17,6 @@
 <link href="{% static 'allifapperp/css/navbars/sidetopnavbars.css' %}" rel="stylesheet">
 <link href="{% static 'allifapperp/css/body/mainbodyui.css' %}" rel="stylesheet">
 <!--any styles loaded from the static files are to be included here...-->
-<link href="{% static 'css/main.css' %}" rel="stylesheet">
 
 {% block style %}
 
