--- a/static/allifapperp/css/body/mainbodyui.css
+++ b/static/allifapperp/css/body/mainbodyui.css
@@ -94,6 +94,8 @@ text-align: center;
     overflow: auto;
     margin-left: 1px;
     display: inline;
+    padding: 0;
+    margin: 0;
    
   }
  
